[package]
name = "sentence-transformers"
version = "0.19.3-pre"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
ndarray.workspace = true
tokenizers.workspace = true
tract-onnx = { path = "../../onnx", version = "=0.19.3-pre" }
